--- a/app/views/simple_calendar/_one_week_calendar.html.erb
+++ b/app/views/simple_calendar/_one_week_calendar.html.erb
@@ -27,12 +27,12 @@
 
     <tbody>
       <% date_range.each_slice(7) do |week| %>
-        <% (7..22).each do |h|%>
+        <% (7..22).each do |hour|%>
           <tr>
-            <td><%= "#{h}:00" %></td>
+            <td><%= "#{hour}:00" %></td>
             <% week.each do |day| %>
               <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-                <% instance_exec(day, calendar.sorted_events_for(day), &passed_block) %>
+                <% instance_exec(day, hour, calendar.sorted_events_for(day), &passed_block) %>
               <% end %>
             <% end %>
           </tr>
