--- a/app/views/simple_calendar/_one_week_calendar.html.erb
+++ b/app/views/simple_calendar/_one_week_calendar.html.erb
@@ -28,7 +28,7 @@
           <tr>
             <td><%= "#{hour}:00" %></td>
             <% week.each do |day| %>
-              <%= content_tag :td, class: calendar.td_classes_for(day) do %>
+              <%= content_tag :td, class: calendar.td_classes_for_hour(day, hour) do %>
                 <% instance_exec(day, hour, calendar.sorted_events_for(day), &passed_block) %>
               <% end %>
             <% end %>
